fixed resume button z-index

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -59,6 +59,7 @@
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
+    z-index: -1;
 }
 
 .button-31:hover,
